Tentativa de rodar audio em iOS (ogg > wav) + little css

--- a/audiozzap-page/src/App.css
+++ b/audiozzap-page/src/App.css
@@ -30,11 +30,16 @@
   color: white;
 }
 
+.App h2 {
+  color: white;
+  font-family: 'Ubuntu', sans-serif;
+}
+
 .App p{
   color: white;
 }
 
-.App span{
+.z{
   color: greenyellow;
   display: inline-block;
   transform: rotate(15deg);
