--- a/audiozzap-page/src/styles/AudioPage.module.css
+++ b/audiozzap-page/src/styles/AudioPage.module.css
@@ -4,10 +4,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    vertical-align: center;
     gap: 10px;
     width: 40%;
     min-width: 310px;
-    min-height: 100vh;
-    padding-top: 50px;
+    padding: 50px 0 50px 0;
 
 }
