--- a/audiozzap-page/src/styles/Audio.module.css
+++ b/audiozzap-page/src/styles/Audio.module.css
@@ -1,10 +1,12 @@
 .audioContainer {
-    height: 5em;
-    width: 100%;
+    height: 8em;
+    min-width: 300px;
     max-width: 300px; /* Adjust based on your design */
     border: solid black 2px;
     border-radius: 8px;
     background-color: rgb(181, 251, 165);
     padding-top: 15px;
+    display: flex;
+    justify-content: center;
 }
 
